; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/drivers/extr_dispmanx_gfx.c_dispmanx_gfx_frame.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/drivers/extr_dispmanx_gfx.c_dispmanx_gfx_frame.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }
%struct.dispmanx_video = type { i32, i32, float, i32, i32*, i32*, i64, i64 }

@VC_IMAGE_XRGB8888 = common dso_local global i32 0, align 4
@VC_IMAGE_RGB565 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i32, i32, i32, i32, i8*, %struct.TYPE_4__*)* @dispmanx_gfx_frame to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dispmanx_gfx_frame(i8* %0, i8* %1, i32 %2, i32 %3, i32 %4, i32 %5, i8* %6, %struct.TYPE_4__* %7) #0 {
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i8*, align 8
  %17 = alloca %struct.TYPE_4__*, align 8
  %18 = alloca %struct.dispmanx_video*, align 8
  %19 = alloca float, align 4
  store i8* %0, i8** %10, align 8
  store i8* %1, i8** %11, align 8
  store i32 %2, i32* %12, align 4
  store i32 %3, i32* %13, align 4
  store i32 %4, i32* %14, align 4
  store i32 %5, i32* %15, align 4
  store i8* %6, i8** %16, align 8
  store %struct.TYPE_4__* %7, %struct.TYPE_4__** %17, align 8
  %20 = load i8*, i8** %10, align 8
  %21 = bitcast i8* %20 to %struct.dispmanx_video*
  store %struct.dispmanx_video* %21, %struct.dispmanx_video** %18, align 8
  %22 = call float (...) @video_driver_get_aspect_ratio()
  store float %22, float* %19, align 4
  %23 = load i8*, i8** %11, align 8
  %24 = icmp ne i8* %23, null
  br i1 %24, label %26, label %25

25:                                               ; preds = %8
  store i32 1, i32* %9, align 4
  br label %125

26:                                               ; preds = %8
  %27 = load i32, i32* %12, align 4
  %28 = load %struct.dispmanx_video*, %struct.dispmanx_video** %18, align 8
  %29 = getelementptr inbounds %struct.dispmanx_video, %struct.dispmanx_video* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 8
  %31 = icmp ne i32 %27, %30
  br i1 %31, label %44, label %32

32:                                               ; preds = %26
  %33 = load i32, i32* %13, align 4
  %34 = load %struct.dispmanx_video*, %struct.dispmanx_video** %18, align 8
  %35 = getelementptr inbounds %struct.dispmanx_video, %struct.dispmanx_video* %34, i32 0, i32 1
  %36 = load i32, i32* %35, align 4
  %37 = icmp ne i32 %33, %36
  br i1 %37, label %44, label %38

38:                                               ; preds = %32
  %39 = load %struct.dispmanx_video*, %struct.dispmanx_video** %18, align 8
  %40 = getelementptr inbounds %struct.dispmanx_video, %struct.dispmanx_video* %39, i32 0, i32 2
  %41 = load float, float* %40, align 8
  %42 = load float, float* %19, align 4
  %43 = fcmp une float %41, %42
  br i1 %43, label %44, label %118

44:                                               ; preds = %38, %32, %26
  %45 = load i32, i32* %12, align 4
  %46 = icmp eq i32 %45, 0
  br i1 %46, label %50, label %47

47:                                               ; preds = %44
  %48 = load i32, i32* %13, align 4
  %49 = icmp eq i32 %48, 0
  br i1 %49, label %50, label %51

50:                                               ; preds = %47, %44
  store i32 1, i32* %9, align 4
  br label %125

51:                                               ; preds = %47
  %52 = load i32, i32* %12, align 4
  %53 = load %struct.dispmanx_video*, %struct.dispmanx_video** %18, align 8
  %54 = getelementptr inbounds %struct.dispmanx_video, %struct.dispmanx_video* %53, i32 0, i32 0
  store i32 %52, i32* %54, align 8
  %55 = load i32, i32* %13, align 4
  %56 = load %struct.dispmanx_video*, %struct.dispmanx_video** %18, align 8
  %57 = getelementptr inbounds %struct.dispmanx_video, %struct.dispmanx_video* %56, i32 0, i32 1
  store i32 %55, i32* %57, align 4
  %58 = load i32, i32* %15, align 4
  %59 = load %struct.dispmanx_video*, %struct.dispmanx_video** %18, align 8
  %60 = getelementptr inbounds %struct.dispmanx_video, %struct.dispmanx_video* %59, i32 0, i32 3
  store i32 %58, i32* %60, align 4
  %61 = load float, float* %19, align 4
  %62 = load %struct.dispmanx_video*, %struct.dispmanx_video** %18, align 8
  %63 = getelementptr inbounds %struct.dispmanx_video, %struct.dispmanx_video* %62, i32 0, i32 2
  store float %61, float* %63, align 8
  %64 = load %struct.dispmanx_video*, %struct.dispmanx_video** %18, align 8
  %65 = getelementptr inbounds %struct.dispmanx_video, %struct.dispmanx_video* %64, i32 0, i32 4
  %66 = load i32*, i32** %65, align 8
  %67 = icmp ne i32* %66, null
  br i1 %67, label %68, label %73

68:                                               ; preds = %51
  %69 = load %struct.dispmanx_video*, %struct.dispmanx_video** %18, align 8
  %70 = load %struct.dispmanx_video*, %struct.dispmanx_video** %18, align 8
  %71 = getelementptr inbounds %struct.dispmanx_video, %struct.dispmanx_video* %70, i32 0, i32 4
  %72 = call i32 @dispmanx_surface_free(%struct.dispmanx_video* %69, i32** %71)
  br label %73

73:                                               ; preds = %68, %51
  %74 = load %struct.dispmanx_video*, %struct.dispmanx_video** %18, align 8
  %75 = load i32, i32* %12, align 4
  %76 = load i32, i32* %13, align 4
  %77 = load i32, i32* %15, align 4
  %78 = load %struct.dispmanx_video*, %struct.dispmanx_video** %18, align 8
  %79 = getelementptr inbounds %struct.dispmanx_video, %struct.dispmanx_video* %78, i32 0, i32 7
  %80 = load i64, i64* %79, align 8
  %81 = icmp ne i64 %80, 0
  %82 = zext i1 %81 to i64
  %83 = select i1 %81, i32 32, i32 16
  %84 = load %struct.dispmanx_video*, %struct.dispmanx_video** %18, align 8
  %85 = getelementptr inbounds %struct.dispmanx_video, %struct.dispmanx_video* %84, i32 0, i32 7
  %86 = load i64, i64* %85, align 8
  %87 = icmp ne i64 %86, 0
  br i1 %87, label %88, label %90

88:                                               ; preds = %73
  %89 = load i32, i32* @VC_IMAGE_XRGB8888, align 4
  br label %92

90:                                               ; preds = %73
  %91 = load i32, i32* @VC_IMAGE_RGB565, align 4
  br label %92

92:                                               ; preds = %90, %88
  %93 = phi i32 [ %89, %88 ], [ %91, %90 ]
  %94 = load %struct.dispmanx_video*, %struct.dispmanx_video** %18, align 8
  %95 = getelementptr inbounds %struct.dispmanx_video, %struct.dispmanx_video* %94, i32 0, i32 2
  %96 = load float, float* %95, align 8
  %97 = load %struct.TYPE_4__*, %struct.TYPE_4__** %17, align 8
  %98 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %97, i32 0, i32 0
  %99 = load i32, i32* %98, align 4
  %100 = load %struct.dispmanx_video*, %struct.dispmanx_video** %18, align 8
  %101 = getelementptr inbounds %struct.dispmanx_video, %struct.dispmanx_video* %100, i32 0, i32 4
  %102 = call i32 @dispmanx_surface_setup(%struct.dispmanx_video* %74, i32 %75, i32 %76, i32 %77, i32 %83, i32 %93, i32 255, float %96, i32 %99, i32 0, i32** %101)
  %103 = load %struct.dispmanx_video*, %struct.dispmanx_video** %18, align 8
  %104 = getelementptr inbounds %struct.dispmanx_video, %struct.dispmanx_video* %103, i32 0, i32 6
  %105 = load i64, i64* %104, align 8
  %106 = icmp ne i64 %105, 0
  br i1 %106, label %107, label %117

107:                                              ; preds = %92
  %108 = load %struct.dispmanx_video*, %struct.dispmanx_video** %18, align 8
  %109 = getelementptr inbounds %struct.dispmanx_video, %struct.dispmanx_video* %108, i32 0, i32 5
  %110 = load i32*, i32** %109, align 8
  %111 = icmp ne i32* %110, null
  br i1 %111, label %112, label %117

112:                                              ; preds = %107
  %113 = load %struct.dispmanx_video*, %struct.dispmanx_video** %18, align 8
  %114 = load %struct.dispmanx_video*, %struct.dispmanx_video** %18, align 8
  %115 = getelementptr inbounds %struct.dispmanx_video, %struct.dispmanx_video* %114, i32 0, i32 5
  %116 = call i32 @dispmanx_surface_free(%struct.dispmanx_video* %113, i32** %115)
  br label %117

117:                                              ; preds = %112, %107, %92
  br label %118

118:                                              ; preds = %117, %38
  %119 = load %struct.dispmanx_video*, %struct.dispmanx_video** %18, align 8
  %120 = load i8*, i8** %11, align 8
  %121 = load %struct.dispmanx_video*, %struct.dispmanx_video** %18, align 8
  %122 = getelementptr inbounds %struct.dispmanx_video, %struct.dispmanx_video* %121, i32 0, i32 4
  %123 = load i32*, i32** %122, align 8
  %124 = call i32 @dispmanx_surface_update(%struct.dispmanx_video* %119, i8* %120, i32* %123)
  store i32 1, i32* %9, align 4
  br label %125

125:                                              ; preds = %118, %50, %25
  %126 = load i32, i32* %9, align 4
  ret i32 %126
}

declare dso_local float @video_driver_get_aspect_ratio(...) #1

declare dso_local i32 @dispmanx_surface_free(%struct.dispmanx_video*, i32**) #1

declare dso_local i32 @dispmanx_surface_setup(%struct.dispmanx_video*, i32, i32, i32, i32, i32, i32, float, i32, i32, i32**) #1

declare dso_local i32 @dispmanx_surface_update(%struct.dispmanx_video*, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
